<?xml version="1.0" encoding="utf-8"?>

<!-- DO NOT CHANGE RESOURCE NAME(ID) --><!-- RESOURCES NAMES(ID) ARE LINKED TO DATABASE COLUMNS -->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@drawable/reduis"/>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activityPadding"
        tools:context=".activity.PersonRegistrationActivity">



        <EditText
            android:id="@+id/month"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/month"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/day"
            app:layout_constraintTop_toBottomOf="@+id/imageFrame" />


        <EditText
            android:id="@+id/day"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/day"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/month"
            app:layout_constraintStart_toEndOf="@+id/birthdayLabel" />

        <Spinner
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:entries="@array/gender"
            app:layout_constraintBaseline_toBaselineOf="@+id/married"
            app:layout_constraintEnd_toStartOf="@+id/middleGuideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageFrame"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/placeOfBirth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/place_of_birth"
            android:inputType="textCapWords"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageFrame"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <CheckBox
            android:id="@+id/married"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/is_married"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/middleGuideline"
            app:layout_constraintTop_toBottomOf="@+id/month" />

        <android.support.constraint.Guideline
            android:id="@+id/middleGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


        <EditText
            android:id="@+id/education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/education"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/married" />





        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/education" />

        <EditText
            android:id="@+id/diseases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/diseases_like_allergy_asthma_myopia"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <EditText
            android:id="@+id/year"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/year"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/month"
            app:layout_constraintStart_toEndOf="@+id/month" />

        <TextView
            android:id="@+id/birthdayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/birthday"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/month"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/imageFrame"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:onClick="pickImage"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/uploadImageLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/bigshot_one"
                android:gravity="center"
                android:text="@string/upload_image"
                android:textSize="18sp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/uploadingLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/bigshot_one"
                    android:text="@string/uploading" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/percentageText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="10sp" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="0"
                        android:progressDrawable="@drawable/progress_bar" />
                </FrameLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/personalImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/personal_image" />

        </android.support.v7.widget.CardView>

        <EditText
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.168"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diseases" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
</LinearLayout>