<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="?android:selectableItemBackground">

    <android.support.v7.widget.CardView
        android:transitionName="@string/personal_image_transition"
        android:id="@+id/imageFrame"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="30dp"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/noImageLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/bigshot_one"
            android:gravity="center"
            android:text="@string/no_image"
            android:layout_gravity="center"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/personalImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            />

    </android.support.v7.widget.CardView>

    <TextView
        android:transitionName="@string/name_transition"
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bigshot_one"
        android:text="Ahmed ali"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageFrame"
        app:layout_constraintTop_toTopOf="@+id/imageFrame"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="16 years old"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageFrame"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:transitionName="@string/age_transition"/>

</android.support.constraint.ConstraintLayout>